Add production-grade middleware: auth, validation, rate limiting, App Insights telemetry, enhanced health checks

--- a/.env.example
+++ b/.env.example
@@ -43,3 +43,6 @@ AUDIT_LOG_RETENTION_DAYS=90
 # Security
 API_KEY_HASH_SECRET=your-secret-here
 GHIN_MIDDLEWARE_SECRET=your-middleware-secret-here
+
+# Observability (Application Insights)
+APPLICATIONINSIGHTS_CONNECTION_STRING=InstrumentationKey=your-key;IngestionEndpoint=https://<region>.in.applicationinsights.azure.com/
