Allow jest to pass with no tests present

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "roots": [
       "<rootDir>/src"
     ],
+    "passWithNoTests": true,
     "modulePathIgnorePatterns": [
       "<rootDir>/wwwroot/"
     ],
