--- a/.github/workflows/deploy-middleware.yml
+++ b/.github/workflows/deploy-middleware.yml
@@ -51,11 +51,31 @@ jobs:
         print(f"PP check: msdeploySiteLen={ms_site} zipPublishUrlLen={zd_url}")
         PY
 
+      - name: Extract app name from publish profile
+        id: ppmeta
+        shell: bash
+        run: |
+        set -euo pipefail
+        python3 - <<'PY'
+        import xml.etree.ElementTree as ET
+        with open('publish_profile.xml','r') as f:
+          xml=f.read()
+        root=ET.fromstring(xml)
+        ms=None
+        for p in root.findall('publishProfile'):
+          if p.get('publishMethod')=='MSDeploy':
+            ms=p; break
+        appname = ms.get('msdeploySite') if ms is not None else ''
+        print('appname:', appname)
+        with open('/tmp/gout','w') as gout:
+          gout.write(f"app_name={appname}\n")
+        PY
+        cat /tmp/gout >> "$GITHUB_OUTPUT"
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
       id: deploywebapp
       with:
-        app-name: ${{ env.AZURE_WEBAPP_NAME }}
+          app-name: ${{ steps.ppmeta.outputs.app_name }}
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
         package: .
       continue-on-error: true
