--- a/package.json
+++ b/package.json
@@ -21,25 +21,25 @@
   "author": "Hold2Admin",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "dotenv": "^16.4.5",
-    "mssql": "^10.0.1",
-    "redis": "^4.6.11",
     "@azure/identity": "^4.0.0",
     "@azure/keyvault-secrets": "^4.7.0",
     "applicationinsights": "^2.7.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
-    "winston": "^3.11.0",
-    "uuid": "^9.0.1"
+    "helmet": "^7.1.0",
+    "mssql": "^12.2.0",
+    "redis": "^4.6.11",
+    "uuid": "^9.0.1",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
+    "eslint": "^9.17.0",
     "jest": "^29.7.0",
-    "supertest": "^6.3.3",
-    "eslint": "^8.56.0"
+    "nodemon": "^3.0.2",
+    "supertest": "^7.1.3"
   },
   "engines": {
     "node": ">=20.0.0"
@@ -49,9 +49,6 @@
       "<rootDir>/src"
     ],
     "passWithNoTests": true,
-    "modulePathIgnorePatterns": [
-      "<rootDir>/wwwroot/"
-    ],
     "testPathIgnorePatterns": [
       "<rootDir>/node_modules/"
     ]
