--- a/.github/workflows/deploy-middleware.yml
+++ b/.github/workflows/deploy-middleware.yml
@@ -35,10 +35,11 @@ jobs:
       shell: bash
       run: |
         set -euo pipefail
-        echo "Creating minimal deploy.zip (excluding wwwroot, logs, coverage)"
+        echo "Creating deploy.zip with node_modules"
         rm -f deploy.zip
         zip -r deploy.zip \
           src \
+          node_modules \
           package.json \
           package-lock.json \
           README.md \
